Fix calendar size for mobile on Safari.

--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -64,6 +64,7 @@
     justify-content: center;
 
     & table {
+      width: 100%;
       & th, & td {
         padding: 0.6em;
         text-align: left;
